--- a/app/src/main/res/values-zh-rSG/strings.xml
+++ b/app/src/main/res/values-zh-rSG/strings.xml
@@ -81,4 +81,9 @@
     <string name="select_a_text_file">单击此处选择文本文件</string>
     <string name="select_text_file_first">请选择文本文件后再继续</string>
     <string name="success">成功!</string>
+    <string name="more_font">更多</string>
+    <string name="custom_font">自定义字体</string>
+    <string name="font_is_imported">字体已导入，点击选择新字体</string>
+    <string name="may_only_english">可能仅支持英语</string>
+    <string name="click_to_select_a_font">单击选择字体</string>
 </resources>
