--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -38,7 +38,7 @@
     <string name="button_style">书写板控件样式</string>
     <string name="button_hide">隐藏</string>
     <string name="button_bottom_bar">导航栏</string>
-    <string name="button_manual">点击红色区域打开设置屏幕</string>
+    <string name="settings_button_manual">点击红色区域打开设置屏幕</string>
     <string name="edit_button_manual">单击紫色区域以编辑书写板文本</string>
     <string name="easter_eggs">致所有发现这里的人:\n恭喜，你找到了彩蛋!\n\n祝你有美好的一天!!</string>
     <string name="may_all_people_equal">愿所有人能以平等的眼光看待任何群体</string>
