--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -38,7 +38,7 @@
     <string name="button_style">WritingBoard 控制項樣式</string>
     <string name="button_hide">隱藏</string>
     <string name="button_bottom_bar">導覽列</string>
-    <string name="button_manual">點選紅色區域開啟設定畫面。</string>
+    <string name="settings_button_manual">點選紅色區域開啟設定畫面。</string>
     <string name="edit_button_manual">點擊紫色區域可編輯WritingBoard文本</string>
     <string name="easter_eggs">致所有發現這裡的人:\n恭喜你，你找到了彩蛋!\n\n祝你有美好的一天!!</string>
     <string name="may_all_people_equal">願所有人以平等的眼光看待任何群體</string>
