--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="widget_textonly_description">WritingBoard text only widget</string>
     <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>
     <string name="default_string">Default</string>
-    <string name="done">Done</string>
+    <string name="done">Finish</string>
     <string name="edit">Edit</string>
     <string name="settings">Settings</string>
     <string name="allow_multiple_lines">Allow save multiple lines at end.\n(more than one lines)</string>
@@ -45,12 +45,12 @@
     <string name="may_all_people_equal">May all people view any group with equal eyes.</string>
     <string name="to_the_special_you"><![CDATA[To the Special You 🏳️‍⚧️:\nDon’t surrender to anxiety and depression, There will eventually be a place for us in this world.\nPlease do not despair, there is always someone standing by your side.\n\n - text by MtF.wiki & Z-Siqi]]></string>
     <string name="may_everyone">May everyone live freely under the sun.</string>
-    <string name="see_easter_egg_again" tools:ignore="Typos">If you wanna see the Easter egg again or wanna see it again when you feel sad or bad, \nplease enter _-OPEN_IT at end of text and click the Done button.</string>
+    <string name="see_easter_egg_again" tools:ignore="Typos">If you wanna see the Easter egg again or wanna see it again when you feel sad or bad, \nplease enter _-OPEN_IT at end of text and click the Finish button.</string>
     <string name="font_weight">WritingBoard font weight</string>
     <string name="thin">Thin</string>
     <string name="normal">Normal</string>
-    <string name="thick">Thick</string>
-    <string name="disable_auto_save">Disable auto save text</string>
+    <string name="thick">Bold</string>
+    <string name="disable_auto_save">Disable auto save text \n(do not save if not click Finish)</string>
     <string name="lower_than_android13">Your system version is lower than Android 13</string>
     <string name="feature_supports_android13">This feature only supports Android 13+</string>
     <string name="back">Go Back</string>
@@ -87,4 +87,5 @@
     <string name="font_is_imported">Font is imported, Click to select a new font.</string>
     <string name="may_only_english">May only support English language</string>
     <string name="click_to_select_a_font">Click to select a font</string>
+    <string name="font_is_invalid">Font is invalid! Please click to select a valid font</string>
 </resources>
