--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- DO NOT TRANSLATE "used_language" -->
-    <string name="used_language">EN</string> <!-- DO NOT TRANSLATE IT -->
+    <string name="language">EN</string> <!-- DO NOT TRANSLATE IT -->
     <!-- DO NOT TRANSLATE "used_language" -->
     <string name="app_name">WritingBoard</string>
     <string name="confirm">Confirm</string>
@@ -13,11 +13,13 @@
     <string name="done">Finish</string>
     <string name="edit">Edit</string>
     <string name="settings">Settings</string>
-    <string name="allow_multiple_lines">Allow save multiple lines at end.\n(more than one lines)</string>
+    <string name="merge_line_break">Merge multiple line breaks at end into one \n(when loading from storage)</string>
     <string name="clean_pointer_focus">Clean pointer focus when\nkeyboard is retracted.</string>
     <string name="clean_all_texts_button">Clean all texts button</string>
     <string name="edit_writingboard_button">Read-only mode\n(Add a button to edit text)</string>
-    <string name="language">Language (Android 13+)\nClick to open AppSettings to change</string>
+    <string name="language_support">Language \n(Click to change)</string>
+    <string name="language_unsupported">Language (Android 13+)\nUnsupported! this feature request Android API 33+</string>
+    <string name="language_no_support">Language setting is not support below Android13 \nPlease try to update your system!</string>
     <string name="small">Small</string>
     <string name="medium">Medium</string>
     <string name="large">Large</string>
@@ -35,7 +37,7 @@
     <string name="keyboard_texts_action">Texts Action</string>
     <string name="others">Others</string>
     <string name="about">About</string>
-    <string name="about_app">About WritingBoard \ngithub.com/Z-Siqi/WrtingBoard/</string>
+    <string name="about_app">About WritingBoard</string>
     <string name="button_style">WritingBoard control style</string>
     <string name="button_hide">Hide</string>
     <string name="button_bottom_bar">Bottom Bar</string>
@@ -50,7 +52,7 @@
     <string name="thin">Thin</string>
     <string name="normal">Normal</string>
     <string name="thick">Bold</string>
-    <string name="disable_auto_save">Disable auto save text \n(do not save if not click Finish)</string>
+    <string name="instant_save_text">Instant save text \n(save text immediately when it changes)</string>
     <string name="lower_than_android13">Your system version is lower than Android 13</string>
     <string name="feature_supports_android13">This feature only supports Android 13+</string>
     <string name="back">Go Back</string>
@@ -63,10 +65,9 @@
     <string name="TILE_ADD_REQUEST_NotDetected">Not Detected, Try Click Again</string>
     <string name="TILE_ADD_REQUEST_NO_SUPPORT">Not support below Android 13!</string>
     <string name="REQUEST_IN_PROGRESS">Request in progress</string>
-    <string name="TILE_ADD_REQUEST_0">Not Added</string>
+    <string name="TILE_ADD_REQUEST_0">Tile not added or tile addition was canceled</string>
     <string name="TILE_ADD_REQUEST_1">Already added</string>
     <string name="TILE_ADD_REQUEST_2">Tile is added</string>
-    <string name="language_no_support">Language setting is not support below Android13 \nPlease try to update your system!</string>
     <string name="request_widget">Add WritingBoard Widget</string>
     <string name="text_only">Text Only</string>
     <string name="not_support">Not Support</string>
@@ -88,4 +89,6 @@
     <string name="may_only_english">May only support English language</string>
     <string name="click_to_select_a_font">Click to select a font</string>
     <string name="font_is_invalid">Font is invalid! Please click to select a valid font</string>
+    <string name="less">Less</string>
+    <string name="sponsor_me">Sponsor Me \n(If you like my work, please consider supporting me with a donation!)</string>
 </resources>
