--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -88,8 +88,11 @@
     <string name="font_is_imported">字体已导入，点击选择新字体</string>
     <string name="may_only_english">可能仅支持英语</string>
     <string name="click_to_select_a_font">单击选择字体</string>
-    <string name="font_is_invalid">Font is invalid! Please click to select a valid font</string>
-    <string name="less">Less</string>
-    <string name="sponsor_me">Sponsor Me \n(If you like my work, please consider supporting me with a donation!)</string>
-    <string name="capitalization_sentences">Request capitalized first letter from soft keyboard (IME)</string>
+    <string name="font_is_invalid">字体无效！请单击以选择有效的字体</string>
+    <string name="less">较少的</string>
+    <string name="sponsor_me">赞助我 \n(如果您喜欢我的工作，请考虑通过捐款来支持我!)</string>
+    <string name="capitalization_sentences">请求软键盘的大写首字母 (IME)</string>
+    <string name="unable_import_too_many_text">无法导入，因为会显示太多文本</string>
+    <string name="file_size_limit"><![CDATA[文件大小不允许 > 256 kb，因此无法选择!]]></string>
+    <string name="too_many_text">文字太多, 不再允许增加更多文字!</string>
 </resources>
